# Theory_Of_Compilation_Homework_5

./: .gitignore  CMakeLists.txt  README.md  attributes.hpp  bp.cpp  bp.hpp  enums.h  expression.h  full_qqq_Our_Self_Check.sh  funcSymbolsTable.cpp  funcSymbolsTable.h  function.h  globalFuncs.cpp  globalFuncs.h  hw3_output.cpp  hw3_output.hpp  hw5  lex.yy.c  parser.tab.cpp  parser.tab.hpp  parser.ypp  qqq_Our_Self_Check.sh  runner.sh  runnerYehonatan.sh  scanner.lex  scope.h  selfcheck-hw5  selfcheck-hw5-course  statement.h  testsFile.cpp  var.h  varsSymbolsTable.h  תכנון קוד.docx
submi/: bp.hpp  enums.h  expression.cpp  expression.h  funcSymbolsTable.cpp  function.h  globalFuncs.cpp  globalFuncs.h  hw3_output.hpp  parser.ypp  statement.h  var.cpp  varsSymbolsTable.h
tests/: t2.in
tests/daniel/: t1.in
